--- a/whatgit.html
+++ b/whatgit.html
@@ -27,6 +27,11 @@
                     <img class="w-100" src="..//img/git.png" alt="">
             </div>
         </div>
+        <div class="row">
+                <div class="col-md-12">
+                        <div>Для того чтобы сохранять изменения проекта нужно делать <b>commit</b>(снимок или слепок).<b>Commit</b> можно сравнить с сохранениями в играх. В любой момент вы можете вернуться к любому сделанному коммиту по индификатору чтобы посмотреть как проект выглядел до изменений.</div>
+                </div>
+            </div>
         
     </div>
    
