add githelp.html and change style.css and setup.html

--- a/setup.html
+++ b/setup.html
@@ -17,7 +17,8 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div>Заходим на сайт по ссылке <a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a> и там выбираем на какую операцинную систему вы будете скачивать установщик <b>Git</b>. Далее устанавливаем. На <b>Windows</b> при установке надо поставить галочку на <b>Git Bash Here</b></div> 
+                <div>Заходим на сайт по ссылке <a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a> и там выбираем на какую операцинную систему вы будете скачивать установщик <b>Git</b>. Далее устанавливаем. На <b>Windows</b> при установке надо поставить галочку на <b>Git Bash Here</b>.</div>
+                <div>Чтобы узнать установился ли у вас <b>Git</b> и узнать версию нужно в консоли ввести <b>git --version</b></div>  
             </div>
         </div>
         <div class="row">
