--- a/gitcommit.html
+++ b/gitcommit.html
@@ -14,7 +14,8 @@
             <div class="col-md-12">
                 <div><b>git commit</b> - команда которая позволяет делать снимок/слепок проекта. Для начало мы проверяем статут проекта с помошью <b>git status</b> и смотрим если ли <span class="red">untracked</span> и <span class="red">modifed</span> файлы. Далее добавляем их в статус подготовленные с помощью команды <b>git add <span class="blue">.</span></b>.После этого файлы готовы к коммиту</div>
                 <div><b>git commit -m "Комментарий"</b> - стандартный вызов команды <b>git commit</b>. Пишем комментарий в ковычках какие изменения были в нашем проекте.</div>
-                <div><b>git commit -a -m "Комментарий"</b></div>
+                <div><b>git commit -a -m "Комментарий"</b> - команда которая сразу добавляет в статус подготовленного файла и делает коммит. Работает с <span class="red">modifed(изменным файлом)</span></div>
+                <div><b>git commit --amend -m "Комментарий"</b> - команда которая не добавляет новый коммит, а изменяет последний.</div>
             </div>
         </div>
     </div>
