edit all project

--- a/gitadd.html
+++ b/gitadd.html
@@ -12,7 +12,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div><b>git add</b> - команда которая добавляет <span class="red">untracked(неотслежеваемый файл)</span> и <span class="red">modifed(измененный файл)</span> в статус подготовленного файла.</div>
+                <h2 class="h2 text-center">git add. Добавления файлов в отслеживаемую зону</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div>Команда которая добавляет <span class="red">untracked(неотслежеваемый файл)</span> и <span class="red">modifed(измененный файл)</span> в статус подготовленного файла.</div>
                 <div><b>git add <span class="blue">название_файла</span></b> - добавляет файл в статус подготовленного для коммита. Так же можно добавить еще файлы через пробел <b>"git add <span class="blue">название_файла</span> <span class="blue">название_файла_2</span>"</b></div>
                 <div><b>git add <span class="blue">.</span></b> - команда <b>git add</b> c точкой добавляет все файлы в статус подготовленных файлов для коммита.</div>
                 <div><b>git add <span class="blue">*.html</span></b> - добавляет все файлы с в текущей папке с расширением ".html".
