--- a/githelp.html
+++ b/githelp.html
@@ -12,6 +12,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <h2 class="h2 text-center">git help. Документация Git</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
                 <b>git help</b> - документация <b>Git</b>. Вы также можете почитать про определенную команду для этого нужно ввести "<b>git help <span class="blue">название_команды</span></b>"
             </div>
         </div>
