--- a/gitlog.html
+++ b/gitlog.html
@@ -12,7 +12,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div><b>git log</b> - команда которая показывает лог, где показыны все коммиты и их id номера, а также автора коммита и дату добавления. Самый последний коммит отображается первым.</div>
+                <h2>git log. Просмотр истории коммитов </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div><b>git log</b> - команда которая показывает лог, где показаны все коммиты и их id номера, а также автора коммита и дату добавления. Самый последний коммит отображается первым.</div>
             </div>
         </div>
         <div class="row">
