--- a/setup.html
+++ b/setup.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2 class="text-center">Установка</h2>
+                <h2 class="h2 text-center">Установка</h2>
             </div>
         </div>
         <div class="row">
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                 <h2 class="text-center">Конфигурация</h2>
+                 <h2 class="h2 text-center">Конфигурация</h2>
             </div>
         </div>
     </div>
