--- a/gitinit.html
+++ b/gitinit.html
@@ -12,7 +12,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div><b>git init</b> - инициализация <b>Git</b> репозитория. Эта команда создаёт в текущей директории новую поддиректорию с именем .git, содержащую все необходимые файлы репозитория. Если вы закините в эту инициализированную папку какой-нибудь файл или модифицируйте файл,то <b>Git</b> будет отслеживать все эти изменения.</div>
+                <h2 class="h2 text-center">git init. Инициализация локального репозитория</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div><b>git init</b> - инициализация локального <b>Git</b> репозитория. Эта команда создаёт в текущей директории новую поддиректорию с именем .git, содержащую все необходимые файлы репозитория. Если вы закините в эту инициализированную папку какой-нибудь файл или модифицируйте файл,то <b>Git</b> будет отслеживать все эти изменения.</div>
             </div>
         </div>
     </div>
