--- a/whatgit.html
+++ b/whatgit.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div class="container">
+     <div class="row">
+            <div class="col-md-12">
+                  <h2 class="h2 text-center">Что такое Git?</h2>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
                     <div>
