--- a/githelp.html
+++ b/githelp.html
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <b>git help</b> - документация <b>Git</b>. Вы также можете почитать про определенную команду для этого нужно ввести "<b>git help <span class="blue">название_команды</span></b>"
+                <b>git help</b> - документация <b>Git</b>. Вы также можете почитать про определенную команду для этого нужно ввести "<b>git help <span class="blue">название_команды</span></b>". Например <b>"git help status"</b>
             </div>
         </div>
     </div>
